# rgc

./: Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: release.yml
configs/: ant.yaml  blkid.yaml  common.yaml  configure.yaml  curl.yaml  cvs.yaml  df.yaml  diff.yaml  dig.yaml  dnf.yaml  docker.yaml  du.yaml  dummy.yaml  env.yaml  esperanto.yaml  fdisk.yaml  findmnt.yaml  free.yaml  gcc.yaml  getfacl.yaml  getsebool.yaml  go-test.yaml  id.yaml  ifconfig.yaml  iostat_sar.yaml  ip.yaml  iptables.yaml  irclog.yaml  iwconfig.yaml  jobs.yaml  kubectl.yaml  last.yaml  ldap.yaml  log.yaml  lolcat.yaml  ls.yaml  lsattr.yaml  lsblk.yaml  lsmod.yaml  lsof.yaml  (+30 more)
src/: color.rs  config.rs  early_detect.rs  engine.rs  main.rs  process.rs  registry.rs  update.rs  yaml_config.rs
